cccSite/account/static/account/signinstyle.css
*,
*:before,
*:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
/*
form {
  max-width: 600px;
  text-align: center;
  margin: 20px auto;
}

form input, form textarea {
  border: 0;
  outline: 0;
  padding: 1em;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  display: block;
  width: 100%;
  margin-top: 1em;
  font-family: 'Baskerville';
  /* font-weight: bold; 
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  resize: none;
}
form input:focus, form textarea:focus {
  -moz-box-shadow: 0 0px 2px #f3c10d !important;
  -webkit-box-shadow: 0 0px 2px #f3c10d !important;
  box-shadow: 0 0px 2px #f3c10d !important;
}
form #input-submit {
  color: #00205c;
  background: #f3c10d;
  cursor: pointer;
}
form #input-submit:hover {
  -moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
  -webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
  box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
}*/

.banner {
  text-align: center;
  background-color: #f4f4f4;
  padding: 10px 0;
  margin-bottom: 20px;
  border-bottom: 2px solid #ddd;
  letter-spacing: 10px;
}

.banner-letter {
  display: inline-block;
  margin: 0 8px;
  font-size: 18px;
  font-weight: bold;
  color: #333;
}

.testy {
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
}
.testy:focus {
  box-shadow: 0 0px 2px var(--gold) !important;
}
form textarea {
  height: 154px;
}

.half {
  float: left;
  width: 48%;
  margin-bottom: 1em;
}

.right {
  width: 50%;
}

.left {
  margin-right: 2%;
}

@media (max-width: 480px) {
  .half {
    width: 100%;
    float: none;
    margin-bottom: 0;
  }
}
/* Clearfix */
.cf:before,
.cf:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.cf:after {
  clear: both;
}



.heading {
  text-align: center;
  align-items: center;
  background-color: #f3c10d;
  color: #00205c;
  border-radius: 10px;
}

/* .g_id_signin {
  width: 70%;
  margin: auto;
  padding: 10px;
  
  /*rounded edges for container
  border-radius: 20px;
} */

.create_an_account{
  width: 70%;
  margin: auto;
  padding: 10px;
  
  /*rounded edges for container*/
  border-radius: 20px;
}
.containerS1 {
  margin: 0px 0% 0px 4%;
  padding-bottom: 20px;
  width: 100%;
  align-items: center;
}

.containerS2 {
  /*centers div*/
  margin: 0px 0% 0px 3.5%;

  padding: 10px;
  width: 100%;

  /*rounded edges for container*/
  border-radius: 5px;
}

.wrapperS1,.wrapperS2 {
  padding: 10px;
  width: 90%;
  border-radius: 5px;
}

#account-button{
  width: 70%;
  margin: auto;
  padding: 10px;
}

